add social media

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,7 +55,6 @@ img {
     -ms-user-select: none;
     user-select: none;
     -webkit-user-drag: none;
-    user-drag: none;
 }
 a,
 a:hover,
@@ -88,8 +87,11 @@ a span {
 }
 p {
     margin: 0 0 15px;
-    color:#949494;
+    color:#000000;
     font-size:15px;
+}
+.carousel-text {
+    color:#949494
 }
 .clear {
     clear: both;
@@ -219,8 +221,8 @@ p:last-child {
 Section
 */
 .sections {
-    padding-top:80px;
-    padding-bottom:80px;
+    padding-top:100px;
+    /*padding-bottom:80px;*/
     position: relative;
     overflow: hidden;
 }
@@ -561,7 +563,7 @@ input:-ms-input-placeholder {
 /*For service Area*/
 
 .service-content i{
-    color#7b6c63;
+    color:#7b6c63;
     font-size:25px;
 }
 .service-content h5{
@@ -1347,4 +1349,113 @@ input:-ms-input-placeholder {
         height: 52px;
         position: absolute;
     }
+  
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+
+li {
+    float: left;
+}
+
+li a, .dropbtn {
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a:hover, .dropdown:hover .dropbtn {
+    background-color: red;
+}
+
+li.dropdown {
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: fixed;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+  /*.dropdown {
+        float: left;
+        overflow: hidden;
+    }
+
+    .dropdown .dropbtn {
+        cursor: pointer;
+        font-size: 16px;    
+        border: none;
+        outline: none;
+        color: white;
+        padding: 14px 16px;
+        background-color: inherit;
+    }
+
+    .navbar a:hover, .dropdown:hover .dropbtn {
+        background-color: red;
+    }
+
+    .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: #f9f9f9;
+        min-width: 160px;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        z-index: 1;
+    }
+
+    .dropdown-content a {
+        float: none;
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+        text-align: left;
+    }
+
+    .dropdown-content a:hover {
+        background-color: #ddd;
+    }
+*/
+    .show {
+        display: block;
+
+    }
+
+    .issues-header {
+        margin-left: 5%;
+        margin-right: 5%;
+    }
+    .issues-text {
+        margin-left: 10%;
+        margin-right: 10%;
+    }   
+   #issues .sections {
+    margin-top:10px;
+   /* padding-bottom:80px;*/
 }
