--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -208,7 +208,7 @@ p:last-child {
     background-color: #f9f9f9;
 }
 .different-bg{
-    background:#1b1d2a;
+    background:#1B1D71;
 }
 .transition {
     -webkit-transition: all 300ms linear;
@@ -227,6 +227,7 @@ Section
     overflow: hidden;
 }
 .sections.footer {
+    padding-top: 20px;
     padding-bottom:20px;
 }
 section .subtitle h5 {
@@ -457,7 +458,7 @@ input:-ms-input-placeholder {
 /*For Menu Section*/
 .navbar-default {
     /*background-color:#303030;*/
-    background-color:#1b1d2a;
+    background-color:#1B1D71;
     border-color:0;
     height:95px;
     padding-top:15px;
@@ -502,6 +503,8 @@ input:-ms-input-placeholder {
     color:#fff;
     text-transform:uppercase;
     width:75%;
+    /*height: 140px;*/
+    padding-bottom: 40px;
 }
 .home-content h5{
     font-weight:900px;
@@ -810,6 +813,7 @@ input:-ms-input-placeholder {
 }
 .carousel-indicators {
     bottom: -50px;
+    left: 75%;
 }
 .carousel-indicators li{
     height:12px;
@@ -1252,12 +1256,12 @@ input:-ms-input-placeholder {
 .form-control {
     font-size: 14px;
     color: #000;
-    background-color: transparent;
+    background-color: lightgray;
     background-image: none;
     border:0;
     border-radius:0;
     box-shadow:none;
-    border-top:3px solid #000;
+    border-bottom:3px solid #000;
 
 }
 .form-control.txt-area{
@@ -1281,6 +1285,7 @@ input:-ms-input-placeholder {
     font-weight:500;
 }
 #footer .footer-first-content .logo{
+    width: 100px;
     margin-bottom:20px;
 }
 .footer-mid-content .post{
@@ -1450,6 +1455,7 @@ li.dropdown {
     .issues-header {
         margin-left: 5%;
         margin-right: 5%;
+        text-decoration: underline;
     }
     .issues-text {
         margin-left: 10%;
@@ -1459,3 +1465,41 @@ li.dropdown {
     margin-top:10px;
    /* padding-bottom:80px;*/
 }
+.primary-header{
+    font-weight: 700;
+}
+.script {
+    font-family: "Brush Script MT", cursive;
+}
+.quote {
+    font-size: xx-large;
+}
+.quoted {
+    font-size: medium;
+}
+section {
+    margin-left: 20px;
+    margin-right: 20px;
+}
+.media-section{
+    margin-left: 0px;
+    margin-right: 0px;
+}
+@media only screen and (min-width: 1440px) {
+section {
+    margin-left: 380px;
+    margin-right: 380px;
+}
+}
+.home-text-primary{
+    font-size: xx-large;
+    font-family: 'Times New Roman', Times, serif;
+}
+section#bio img{
+float: left;
+margin: 4px 10px 0px 0px; 
+border: 1px solid #000000;
+height: 115px;
+}
+
+
